# xonsh-remote-dir-tabcomplete

./: LICENSE  README.md  README.rst  remoteDirCompleter.py  remoteDirCompleter.xsh  setup.cfg
xontrib/: remote_dir_tabcomplete.xsh
