[metadata]
name = xontrib-remote-dir-tabcomplete
version = 0.0.1
author = 2xlink
author_email = 2xlink
description = Remote dir tab completion for your xonsh shell.
long_description = file: README.rst
url = https://github.com/2xlink/xontrib-remote-dir-tabcomplete
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages=xontrib
python_requires = >=3.5

install_requires =
    xonsh

[options.package_data]
xontrib = *.xsh